wakapi/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wakapi
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: wakapi
  template:
    metadata:
      labels:
        app: wakapi
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: wakapi
          image: ghcr.io/muety/wakapi:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wakapi-pvc
