wakapi/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wakapi-service
  labels:
    app.kubernetes.io/name: wakapi-service
    app.kubernetes.io/part-of: wakapi
spec:
  selector:
    app: wakapi
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
