wakapi/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wakapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wakatime.limtaehyun.dev
      secretName: limtaehyun-dev-tls
  rules:
    - host: wakatime.limtaehyun.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wakapi-service
                port:
                  number: 3000
